--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,12 @@
 // }
 
 {
-  "extends": "next",
+  "extends": "eslint-plugin-next",
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-page-custom-font": "off"
   }
 }
+
+
 
